test/positive/feature_implicitstringconcatenation.java

public class feature_implicitstringconcatenation {
  public feature_implicitstringconcatenation() {}
  public String m(int x) {
    return "foo" + x + true + null;
  }
}

