test/negative/feature_unaryplus.java

public class feature_unaryplus {
  public feature_unaryplus() {}
  public int m(int x) {
    return +x;
  }
}

